# ienf_q

./: .gitignore  README.md  analyze_data.py  neural_connection.py  neural_fiber_gui.py  process_images.py  pyproject.toml  run_process.py  test.ipynb  test_processing.py
U_net_transform/: README.md  config.yaml  dataset.py  loss.py  neural_detection_model.py  preprocess_sampling_regions.py  test.ipynb  train.sh  training_pipeline.py
U_net_transform/wandb/: latest-run
U_net_transform/wandb/offline-run-20250909_125209-ooe72dgp/: run-ooe72dgp.wandb
U_net_transform/wandb/run-20250909_130114-ctr7458x/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
U_net_transform/wandb/run-20250909_131134-rqg4kl4t/: run-rqg4kl4t.wandb
U_net_transform/wandb/run-20250909_131134-rqg4kl4t/files/: config.yaml  neural_detection_model_final.pth  wandb-metadata.json  wandb-summary.json
U_net_transform/wandb/run-20250909_131322-t6tf5cub/files/: config.yaml  neural_detection_model_epoch_10.pth  neural_detection_model_epoch_20.pth  neural_detection_model_epoch_30.pth  neural_detection_model_epoch_40.pth  wandb-metadata.json  wandb-summary.json
__MACOSX/: ._Centered
edge_linking/: edge_connection_utils.py  main.py  node_extraction_utils.py  process_test.ipynb
fluorescence_segmentation/: ica_fluorescence_separation.py  lab_test.ipynb
gui/: __init__.py  main_gui.py  viewport_processor.py
pre_processing/: PROCESSING_README.md  process_images.py
region_growing/: neural_image_region_growing.py  small_region_growing.ipynb
test/: test.ipynb
